--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,8 +9,8 @@ sites:
     url: https://www.desmos.com/calculator
   - name: Deltamath
     url: https://www.deltamath.com/app/student
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Skieslearn
+    url: https://skieslearn.com/ui/course/filter/student
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
